--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-brand-light text-white;
+  }
+  [type="text"]
+    [type="email"]
+    [type="url"]
+    [type="password"]
+    [type="number"]
+    [type="date"]
+    [type="datetime-local"]
+    [type="month"]
+    [type="search"]
+    [type="tel"]
+    [type="time"]
+    [type="week"]
+    [multiple]
+    [type="checkbox"]
+    [type="radio"]
+    textarea
+    select {
+    @apply rounded-md;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .card-dark {
+    @apply bg-brand-main p-6 rounded-lg;
+  }
+  .card-light {
+    @apply bg-brand-dark2 border border-brand-800 p-6 rounded-lg;
+  }
+  .Premium-acc {
+    @apply text-xs font-light flex items-center h-6 px-2 bg-yellow-500 rounded text-yellow-600 bg-opacity-10;
+  }
+  .Trial-acc {
+    @apply text-xs font-light inline-flex items-center h-6 px-2 bg-blue-500 rounded text-blue-600 bg-opacity-10;
+  }
+  .cell-td {
+    @apply text-brand-400 text-sm;
+  }
+  .cell-th {
+    @apply text-xs tracking-widest font-medium text-brand-600 uppercase whitespace-nowrap;
+  }
+  .active-tag {
+    @apply h-6 px-2 text-xs inline-flex items-center justify-center bg-green-600 text-green-600 bg-opacity-20 rounded-md;
+  }
+  .pending-tag {
+    @apply h-6 px-2 text-xs inline-flex items-center justify-center bg-yellow-600 text-yellow-600 bg-opacity-20 rounded-md;
+  }
+  .block-tag {
+    @apply h-6 px-2 text-xs inline-flex items-center justify-center bg-red-600 text-red-600 bg-opacity-20 rounded-md;
+  }
+  .danger-tag {
+    @apply h-6 px-2 text-xs inline-flex items-center justify-center bg-brandred-600 text-brandred-600 bg-opacity-20 rounded-md;
+  }
+  .btn-dark {
+    @apply relative h-12 px-2 bg-brand-light border border-brand-800 rounded-md flex items-center space-x-2 text-sm hover:border-brand-700 hover:bg-brand-800 transition-all duration-500 cursor-pointer;
+  }
+  .menu-show {
+    @apply p-4 mt-2 absolute overflow-auto bg-brand-light border border-brand-700 rounded-md text-sm w-full;
+  }
+  .danger-badge {
+    @apply text-xs font-semibold h-6 px-2 rounded flex justify-center items-center bg-brandred-500 bg-opacity-10 text-brandred-500;
+  }
+  .active-badge {
+    @apply text-xs font-semibold h-6 px-2 rounded flex justify-center items-center bg-green-500 bg-opacity-10 text-green-500;
+  }
+
+  /* Form */
+  .form-search {
+    @apply flex h-12 text-sm border border-brand-800  items-center bg-brand-light  rounded-md px-3 w-72 cursor-pointer hover:bg-brand-800 transition-all duration-500;
+  }
 }
